--- a/BlogApp/Views/Shared/_Layout.cshtml
+++ b/BlogApp/Views/Shared/_Layout.cshtml
@@ -29,6 +29,26 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="ListUsers">Users</a>
                         </li>
                     </ul>
+                    <ul class="navbar-nav ms-auto">
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li class="nav-item">
+                            <span class="navbar-text me-5">Welcome, @User.Identity.Name</span>
+                        </li>
+                        <li class="nav-item">
+                            <form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
+                                @Html.AntiForgeryToken()
+                                <button type="submit" class="nav-link text-dark btn btn-primary">Logout</button>
+                            </form>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark btn btn-primary" asp-area="" asp-controller="Account" asp-action="Login">Login/Register</a>
+                        </li>
+                    }
+                </ul>
                 </div>
             </div>
         </nav>
