--- a/BlogApp/Views/Shared/_Layout.cshtml
+++ b/BlogApp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@using BlogApp.Models.Identity
+@inject UserManager<BlogUser> UserManager
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -32,8 +36,11 @@
                     <ul class="navbar-nav ms-auto">
                     @if (User.Identity.IsAuthenticated)
                     {
+                        var user = await UserManager.GetUserAsync(User);
+                        var userId = user?.Id;
+
                         <li class="nav-item">
-                            <span class="navbar-text me-5">Welcome, @User.Identity.Name</span>
+                            <a class="navbar-text me-5" href="@Url.Action("UserDetails", "User", new { id = userId })">Welcome, @User.Identity.Name</a>
                         </li>
                         <li class="nav-item">
                             <form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
