--- a/BlogApp/Views/Post/DeletePost.cshtml
+++ b/BlogApp/Views/Post/DeletePost.cshtml
@@ -15,5 +15,5 @@
 
 <form method="post" asp-action="PostDeleteConfirmed" asp-route-id="@Model.PostId">
     <button type="submit" class="btn btn-danger">Delete</button>
-    <a href="@Url.Action("UserDetails", @Model.OwnerID)" class="btn btn-secondary">Cancel</a>
+    <a href="@Url.Action("Index", "Home" )" class="btn btn-secondary">Cancel</a>
 </form>
