--- a/BlogApp/Views/Post/PostDetails.cshtml
+++ b/BlogApp/Views/Post/PostDetails.cshtml
@@ -7,8 +7,12 @@
 <h1>@Model.Title</h1>
 
 <div>
-    <strong>Posts by:</strong>
+    <strong>Post by:</strong>
     <span>@Model.Owner.UserName</span>
+</div>
+
+<div>
+    <strong>Posted on:</strong> <span>@Model.CreateDate.ToString("MMMM dd, yyyy h:mm tt")</span>
 </div>
 
 @if (User.Identity.IsAuthenticated && Model.Owner.UserName == User.Identity.Name)
@@ -20,21 +24,19 @@
 }
 
 <div>
-    <strong>Content:</strong>
-    <p>@Model.PostText</p>
+    <p class="PostSquare">@Model.PostText</p>
 </div>
 
 <hr />
 
 <h3>Comments</h3>
-<p>Comments will go here</p>
 
 @if (Model.Comments.Any())
 {
     <ul>
         @foreach (var comment in Model.Comments)
         {
-            <li>@comment.Owner.UserName:-- @comment.CommentText</li>
+            <li>@comment.CommentText --by: @comment.Owner.UserName on @Model.CreateDate.ToString("MMMM dd, yyyy h:mm tt")</li>
         }
     </ul>
 }
@@ -46,6 +48,6 @@ else
 
 <form asp-action="AddComment" method="post">
     <input type="hidden" name="PostId" value="@Model.PostId" />
-    <textarea name="CommentText" placeholder="Write a comment..."></textarea>
+    <textarea class="PostDetailComment" name="CommentText" placeholder="Write a comment..."></textarea>
     <button type="submit">Post Comment</button>
 </form>
